--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,39 @@
 .App {
-  text-align: center;
+
+}
+body{
+  background-color: #282c34;
+  color: white;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.appTheme{
+  background-color: white!important;
+  color: #282c34!important;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  
+  /* min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+ 
 }
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+
 
 .App-link {
   color: #61dafb;
@@ -29,4 +46,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
+
+.bg-gray_100 {
+  background-color: rgba(229, 231, 235,100)
 }
