--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,22 @@ code {
 }
 
 
+.rainbow-letters {
+  font-size: 40px;
+  font-family: sans-serif;
+  text-transform: uppercase;
+}
+
+.rainbow-letters span:nth-child(10n + 1) {
+  color: #ef5350;
+}
+
+.rainbow-text {
+  font-size: xxx-large;
+  font-weight: bold;
+  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
